--- a/index.html
+++ b/index.html
@@ -122,14 +122,13 @@
                     <div class="box-text">
                         <h1>REDEEM</h1>
                         <p>
-                            A e-commerce app & website that collects
-                            points from local stores by scanning QR-CODE
-                            to purchase and spending the points collected
-                            to discounts.
+                            A e-commerce app that detects nearest local stores
+                            and notify what the local stores offers and then
+                            gain points if the offer is purchased.
                         </p>
                     </div>
                     <div class="buttonborder">
-                        <a href="#">VIEW CASESTUDY</a>
+                        <a href="redeem.html">VIEW CASESTUDY</a>
                     </div>
                 </div>
                 <div class="col-xl-1"></div>
@@ -164,7 +163,7 @@
                         </p>
                     </div>
                     <div class="buttonborder">
-                        <a href="#">VIEW CASESTUDY</a>
+                        <a href="ukayukay.html">VIEW CASESTUDY</a>
                     </div>
                 </div>
             </div>
@@ -187,7 +186,7 @@
                         </p>
                     </div>
                     <div class="buttonborder">
-                        <a href="#">VIEW CASESTUDY</a>
+                        <a href="kamayan.html">VIEW CASESTUDY</a>
                     </div>
                 </div>
                 <div class="col-xl-1"></div>
