--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                         <strong>HELLO, MY NAME IS</strong>
                         <h1>DAMIEL MAQUILING</h1>
                         <p>
-                            I'm a UI designer, My portfolio showcases my work projects created
-                            throughout my career. See my contact information below and get in tough.
+                            I'm a UI designer and a Front-end Dev, My portfolio showcases my work projects created
+                            throughout my career. See my contact information below and get in touch.
                         </p>
                         <a href="My_CV.pdf" download="MY_CV">
                             <button type="button">DOWNLOAD CV</button>
@@ -86,7 +86,7 @@
                             <div class="box-text">
                                 <h1>COMPUTER SCIENCE</h1>
                                 <p>
-                                    4yrs undergrad in design &
+                                    4yrs college level in design &
                                     front-end coding
                                 </p>
                             </div>
