--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <strong>HELLO, MY NAME IS</strong>
                         <h1>DAMIEL MAQUILING</h1>
                         <p>
-                            I'm a UI designer and a Front-end Dev, My portfolio showcases my work projects created
+                            I'm a web Designer and Developer, My portfolio showcases my work projects created
                             throughout my career. See my contact information below and get in touch.
                         </p>
                         <a href="My_CV.pdf" download="MY_CV">
